Set the sizing of the model viewport

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div id="control-bar">
             <input type="file" id="model-selector" accept=".stl" />
         </div>
-        <div id="viewing-area"></div>
+        <div id="model-view-port"></div>
     </main>
 </body>
 
