--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <base href="." />
+        <title>Any Viewer</title>
+        <script type="module" src="./scripts/main.js"></script>
+        <link href="./styles/styles.css" rel="stylesheet" />
+    </head>
 
-<head>
-    <meta charset="utf-8" />
-    <base href=".">
-    <title>Any Viewer</title>
-    <script type="module" src="./scripts/main.js"></script>
-    <link href="./styles/styles.css" rel="stylesheet" />
-</head>
-
-<body>
-    <header>
-        <h1>Any Viewer</h1>
-    </header>
-    <main>
-        <div id="control-bar">
-            <input type="file" id="model-selector" accept=".stl" />
-        </div>
-        <canvas id="model-view-port"></canvas>
-    </main>
-</body>
-
+    <body>
+        <header>
+            <h1>Any Viewer</h1>
+        </header>
+        <main>
+            <div id="control-bar">
+                <input type="file" id="model-selector" accept=".stl" />
+            </div>
+            <canvas id="model-view-port"></canvas>
+        </main>
+    </body>
 </html>
