Add initial task for building components

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8" />
         <base href="." />
         <title>Any Viewer</title>
-        <script type="module" src="./scripts/main.js"></script>
+        <script src="./scripts/main.js"></script>
+        <script src="./components/index.js"></script>
         <link href="./styles/styles.css" rel="stylesheet" />
     </head>
 
