Add inital component placeholders

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,12 @@
                 <input type="file" id="model-selector" accept=".stl" />
             </div>
             <canvas id="model-view-port"></canvas>
+            <action-menu>
+                <action-menu-button></action-menu-button>
+                <action-menu-item id="open-model-button"
+                    >Open model</action-menu-item
+                >
+            </action-menu>
         </main>
     </body>
 </html>
