Move renderer setup logic to component

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <main>
-        <canvas id="model-view-port"></canvas>
+        <canvas id="model-view-port" is="render-viewport"></canvas>
         <action-menu>
             <action-menu-item id="open-model-button">Open model</action-menu-item>
             <button is="action-menu-button"></button>
