--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,11 @@
         <main>
             <canvas id="model-view-port" is="render-viewport"></canvas>
             <action-menu>
-                <action-menu-item id="open-model-button"
-                    >Open model</action-menu-item
-                >
+                <ul is="action-menu-list">
+                    <action-menu-list-item id="open-model-action">
+                        <span>Open model</span>
+                    </action-menu-list-item>
+                </ul>
                 <button is="action-menu-button"></button>
             </action-menu>
         </main>
